# pydantic-ai-demo

./: .gitignore  Makefile  README.md  pyproject.toml
src/ai_framework_demo/: __main__.py  llm.py  run_agent.py  services.py
src/ai_framework_demo/pydanticai/: agent.py  deps.py  model.py  tools.py
