[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai_framework_comparison"
version = "0.1.0"
description = "A comparative analysis of Langchain and PydanticAI frameworks"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "langchain>=0.1.0",    
    "pydantic>=2.0.0",
    "pydantic-ai[logfire]>=0.0.19", # Installs all model dependencies
    "langchain~=0.3.0",
    "langchain-community~=0.3.0",
    "langchain-anthropic~=0.3.0",
    "langchain-openai~=0.3.0",
    "langchain-google-genai==2.0.7",
    "langgraph~=0.2.0",
    "rich==13.9.4"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pyright~=1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "C"]
ignore = []

[tool.hatch.build.targets.wheel]
packages = ["src/ai_framework_comparison"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
] 

[tool.pyright]
reportUnusedCallResult = false